modificar avisis lst ts y html para que se queden guardadas las publicaciones o avisos en la pagina principal "Publicaciones" que es home

--- a/src/app/components/aviso-lista/aviso-lista.component.html
+++ b/src/app/components/aviso-lista/aviso-lista.component.html
@@ -1,54 +1,75 @@
 <ion-list slot="start">
   <ion-item *ngFor="let aviso of avisos">
     <ion-thumbnail slot="start">
-
-      <ion-img src="https://docs-demo.ionic.io/assets/madison.jpg"
-        alt="The Wisconsin State Capitol building in Madison, WI at night">
+      <!-- Mostrar la imagen del aviso si existe, de lo contrario mostrar imagen por defecto -->
+      <ion-img 
+        [src]="aviso.imagen || 'assets/imagen-default.jpg'" 
+        [alt]="aviso.titulo || 'Imagen del aviso'">
       </ion-img>
-
     </ion-thumbnail>
 
-    <ion-label >{{ aviso.titulo }}</ion-label>
+    <ion-label class="aviso-info">
+      <h2>{{ aviso.titulo }}</h2>
+      <p class="descripcion">{{ (aviso.descripcion || '') | slice:0:60 }}...</p>
+      <p class="fecha">
+        <ion-icon name="time-outline"></ion-icon>
+        {{ aviso.fecha | fechaComunitaria }}
+      </p>
+    </ion-label>
 
-    <ion-label > {{ aviso.fecha | fechaComunitaria }} </ion-label>
-
-    <!-- boton de eliminar -->
-      <ion-button size="small" (click)="clickEliminar(aviso)">
-        <ion-icon name="trash-outline" slot="icon-only" ios="trash-outline" md="trash-outline"></ion-icon>
-      </ion-button>
-
+    <!-- Botón de eliminar -->
+    <ion-button 
+      size="small" 
+      fill="clear" 
+      color="danger" 
+      (click)="clickEliminar(aviso)">
+      <ion-icon 
+        name="trash-outline" 
+        slot="icon-only" 
+        ios="trash-outline" 
+        md="trash-outline">
+      </ion-icon>
+    </ion-button>
   </ion-item>  
 </ion-list>
 
-<div class="addContainer">
-  <ion-fab >
-    <ion-fab-button (click)="clickAgregar()" >
-      <ion-icon name="add" ></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-</div>
+<!-- Botón flotante para agregar nuevo aviso -->
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button (click)="clickAgregar()" color="primary">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 
-<!-- Modal -->
-<div class="ion-padding">
-  <ion-modal [isOpen]="isModalPriceOpen" 
-              trigger="open-modal" 
-              expand="block"
-              size="small">
-    <ng-template>
-      <ion-header>
-        <ion-title>AVISO</ion-title> 
-      </ion-header>
-      <div class="ion-padding" 
-      slot="start">
-        <p> Haz eliminado esta publicación!</p>
-        <ion-buttons slot="start">
-          <ion-button (click)="setModalPriceOpen(false)" 
-          slot="start"
-          expand="block"
-                      >CERRAR
-          </ion-button>
-        </ion-buttons>
-      </div> 
-    </ng-template>
-  </ion-modal>
-</div>
+<!-- Modal de confirmación -->
+<ion-modal [isOpen]="isModalPriceOpen">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Confirmación</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <p>¿Estás seguro que deseas eliminar esta publicación?</p>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-button 
+              expand="block" 
+              fill="outline" 
+              (click)="setModalPriceOpen(false)">
+              Cancelar
+            </ion-button>
+          </ion-col>
+          <ion-col>
+            <ion-button 
+              expand="block" 
+              color="danger" 
+              (click)="confirmarEliminacion()">
+              Eliminar
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-content>
+  </ng-template>
+</ion-modal>
