--- a/src/app/components/aviso-formulario/aviso-formulario.component.html
+++ b/src/app/components/aviso-formulario/aviso-formulario.component.html
@@ -1,4 +1,5 @@
 <ion-header [translucent]="true" slot="start">
+  <!-- Barra superior con botón de retroceso -->
   <ion-toolbar>
     <ion-buttons slot="start" (click)="cerrarFormulario()" >
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
@@ -10,6 +11,7 @@
 </ion-header>
 
 <form #avisoForm="ngForm" (ngSubmit)="guardarAviso()">
+  <!-- Campo de título con validación -->
   <ion-item lines="none" >
     <ion-input 
       [(ngModel)]="aviso.titulo" 
@@ -42,6 +44,7 @@
     </ion-thumbnail>
   </ion-item>
  
+  <!-- Campo de descripción con validación -->
   <ion-item lines="none">
     <ion-input 
       [(ngModel)]="aviso.descripcion" 
@@ -61,6 +64,7 @@
             [hidden]="descripcionInput.valid || descripcionInput.pristine">
             Debe tener más de 20 caracteres</ion-note>
 
+  <!-- Botón de guardar (deshabilitado si el formulario no es válido) -->
   <ion-item lines="none">
     <ion-button type="submit" 
                 [disabled]="!avisoForm.valid">
