mas comettarios en home.page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,7 @@
       (onAddAviso)="mostrarFormulario()"/>
 </ng-container>
 
+ <!-- Muestra formulario cuando mostrandoFormulario es true -->
 <ng-template #formulario>
   <app-aviso-formulario
     (onClose)="cerrarFormulario()"
